--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@agm/core": "^1.1.0",
     "@angular/animations": "~8.1.0",
-    "@angular/cli": "~8.1.0",
+    "@angular/cli": "^8.1.0",
     "@angular/common": "~8.1.0",
     "@angular/compiler": "~8.1.0",
     "@angular/compiler-cli": "~8.1.0",
